--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <p>通过校内服务器快速地下载一些资源。</p>
       </div><!--/.col-md-3 col-sm-6 col-xs-12 -->
       <div class="col-md-3 col-sm-6 col-xs-12">
-        <a href="./forum.html"><img src="./img/forum.png" width="100" height="100"/></a>
-        <h4>论坛<h4>
-          <p>讨论问题，新生咨询？都在这儿，学长会帮你解决问题！</p>
+        <a href="https://github.com/lunad3v"><img src="./img/git.png" width="100" height="100"/></a>
+        <h4>Git<h4>
+          <p>参与LUNA的代码开发</p>
       </div><!--/.col-md-3 col-sm-6 col-xs-12 -->
       <div class="col-md-3 col-sm-6 col-xs-12">
         <a href="./calendar.html"><img src="./img/cal.png" width="100" height="100"/></a>
