--- a/calendar.html
+++ b/calendar.html
@@ -64,6 +64,14 @@
       <div class="page-header">
               <h1># 活动</h1>
       </div><!--/ header -->
+      <div class="jumbotron">
+        <h2># LUNA发展讨论</h2>
+        <p>地点：B01-407</p>
+        <p>类型：线下讨论</p>
+        <p>参与者：所有LUNA成员</p>
+    <p>时间：2017-01-13【14：00】</p>
+    <p>讨论内容：LUNA后续发展规划。</p>
+      </div>
         <div class="jumbotron">
           <h2># LUNA“发布会”</h2>
           <p>地点：A01-419</p>
