Changed some texts

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body>https://start.fedoraproject.org/
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -70,7 +70,7 @@
         <h1># 关于</h1>
       </div><!-- /.page-header -->
       <p>网站创立之初的想法是重写一个更加优雅的学校网站首页。后经讨论认为这样做不会被批准（即将学校的首页换成我们的页面），便转型成为一个协会。LUNA的名字也由此而来。<br />
-      作为一个非官方，非盈利项目，本站的建设离不开群众的支持，下方列出了所有对网站作出过贡献的人。谢谢你们的参与！</p>
+      作为一个非官方，非盈利项目，本站的建设离不开群众的支持，下方列出了所有对LUNA协会作出过贡献的人。谢谢你们的参与！</p>
       <center><div class="page-header">
         <h1>贡献列表</h1>
       </div><!-- /.page-header --></center>
