Fixed 404 effect when 404 depth is bigger than one

--- a/404.html
+++ b/404.html
@@ -109,7 +109,6 @@ h2 a:hover {
   position: absolute;
   z-index: 1;
 }
-
   </style>
 </head>
 <body>
@@ -120,15 +119,15 @@ h2 a:hover {
     <h2>Go <a href="https://lunaluna.org" >home</a></h2>
   </div>
   <ul id="scene">
-    <li class="layer sidepattern" data-depth="0.40"><img src="./img/sidepattern.jpg"></li>
-    <li class="layer toppattern" data-depth="0.20"><img src="./img/toppattern.jpg"></li>
-    <li class="layer bottompattern" data-depth="0.70"><img src="./img/bottompattern.jpg"></li>
+    <li class="layer sidepattern" data-depth="0.40"><img src="https://lunaluna.org/img/sidepattern.jpg"></li>
+    <li class="layer toppattern" data-depth="0.20"><img src="https://lunaluna.org/img/toppattern.jpg"></li>
+    <li class="layer bottompattern" data-depth="0.70"><img src="https://lunaluna.org/img/bottompattern.jpg"></li>
   </ul>
 </div>
 </body>
-<script src="./js/stopExecutionOnTimeout.js"></script>
-<script src="./js/jquery.min.js"></script>
-<script src="./js/jquery.parallax.js"></script>
+<script src="https://lunaluna.org/js/stopExecutionOnTimeout.js"></script>
+<script src="https://lunaluna.org/js/jquery.min.js"></script>
+<script src="https://lunaluna.org/js/jquery.parallax.js"></script>
 <script>
   $("#scene").parallax();
 </script>
