--- a/freshman.html
+++ b/freshman.html
@@ -98,7 +98,7 @@
 <p>不建议办理，限制十分多，价格很高（79元/月），只能使用哆点软件连接（即无法使用路由器），访问境外网络速度很慢，晚上23：30之后会禁止使用。</p>
 <b>Q:有学长出售旧书？</b>
 <p>A:一部分是由学生自己出售已经用过的旧书。另一部分疑似来源于校外（体育场后方的洞外的一些出租屋内）。</p>
-<p>学校为了圈钱（防止学生买旧书）每年都会更换教材，所以买旧书有可能会出现>80%的书与需要的书不同步的情况。</p>
+<p>学校<del>为了圈钱</del>每年都会更换教材，所以买旧书有可能会出现>80%的书与需要的书不同步的情况。</p>
 <b>Q:寝室推销？（走私鞋，插线版，电话卡等等）</b>
 <p>A:二话不说，直接拒绝。</p>
 <b>Q:如何知道我所住的位置？</b>
