Fixed wrong typing

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
-                      在信息学院和马蒂亚斯国际学院/国际学院的迎新晚会中提供弹幕支持，在这两个学院逐渐获得了知名度。同时，LUNA团队新招入一为大佬～
+                      在信息学院和马蒂亚斯国际学院/国际学院的迎新晚会中提供弹幕支持，在这两个学院逐渐获得了知名度。同时，LUNA团队新招入一位大佬～
                     </p>
                   </div>
                 </div>
