--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
-                      重庆交通大学LUNA协会创立于2016-10-24！此时我们完成了名称的确立——LUNA。初期成员确认：3人
+                      重庆交通大学LUNA协会创立于2016-10-24！此时我们完成了名称的确立——LUNA。初期成员人数：3人
                     </p>
                   </div>
                 </div>
@@ -181,11 +181,6 @@
         <th>重庆交通大学信息学院云平台</th>
         <th>信息科学与工程学院</th>
         <th>用于校内的VM服务器</th>
-      </tbody>
-      <tbody>
-        <th>所有LUNA成员</th>
-        <th>*</th>
-        <th>LUNA校外服务器</th>
       </tbody>
     </thead>
 </table>
