Edited E-mail Address

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <a href="http://10.8.170.11/npels"><button type="button" class="btn btn-danger">新理念英语</button></a>
         <a href="http://lib.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">期刊数据库（维普、万方等）</button></a>
         <p><a href="http://library.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">图书馆</button></a>
-        <small>论文查重</small></p>
+        <small>论文查重的等</small></p>
               </div><!-- /.col-md-4 col-xs-12 col-sm-6-->
 <div class="col-md-4 col-xs-12 col-sm-6">
         <div class="page-header">
@@ -131,9 +131,9 @@
 
     </div><!-- /.row -->
         <div class="page-header">
-          <h1># 加入我们</h1>
+          <h1># 联系我们</h1>
         </div><!-- /.page-header -->
-		<p>发送邮件至：<code>lunaluna[at]sigaint.org</code></p>
+		<p>发送邮件至：<code>lunaluna[at]riseup.net</code></p>
 
     </div> <!-- /container -->
 
