Changed Server Loc.

--- a/mirror.html
+++ b/mirror.html
@@ -89,7 +89,7 @@
   <p>详细信息可以点击“进入镜像站”下方的“查看详情”按钮查看。</p>
   <hr>
   <div class="alert alert-info"><center>服务器IP：<b>10.1.74.132</b>，接入校内任何一个网络（包括网线接入和连接至cqjtu-wlan的用户）即可访问！理论下载速度1.5～10Mib/s</center></div>
-  <div class="alert alert-danger"><center>提示：LunaLuna.org网站服务器位于美国弗吉尼亚亚马逊AWS节点，在国内访问可能较慢，校内用户可以添加服务器IP至收藏夹方便快速进入进入镜像站。</center></div>
+  <div class="alert alert-danger"><center>提示：lunaluna.org网站服务器位于瑞典Gothenburg节点，在国内访问可能较慢，校内用户可以添加服务器IP至收藏夹方便快速进入进入镜像站。</center></div>
   <div class="col-md-6 col-sm-12 col-xs-12">
     <a href="https://10.1.74.132" button type="button" class="btn btn-success btn-block">进入镜像站（SSL）</a>
   </div><!--/.col-md-6 col-sm-12 col-xs-12-->
