Added alert that the server is down

--- a/mirror.html
+++ b/mirror.html
@@ -58,6 +58,7 @@
 
 
     <div class="container">
+  <div class="alert alert-danger"><center>由于南岸学院云平台机房停电，现在镜像站已停止工作，恢复时间未知。</center></div>
 <center>
   <span style="font-family:'Bungee Inline';"><h1>LUNA Mirror Is Here!</h1></span>
 </center>
