--- a/index.html
+++ b/index.html
@@ -1,177 +1,204 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="zh">
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="重庆交通大学LUNA协会官方网站">
+    <meta name="author" content="LUNA">
     <link rel="icon" href="./img/icon.png">
-
     <title>重庆交通大学LUNA协会</title>
-
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-
-
     <link href="./css/style.css" rel="stylesheet">
-
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
-
+    <link href="https://fonts.proxy.ustclug.org/css?family=Josefin+Sans" rel="stylesheet" type="text/css">
+    <link href="https://fonts.proxy.ustclug.org/css?family=Russo+One" rel="stylesheet" type="text/css">
+    <link href="https://fonts.proxy.ustclug.org/css?family=Bungee+Inline" rel="stylesheet" type="text/css">
+    <link href="https://fonts.proxy.ustclug.org/css?family=Jura" rel="stylesheet" type="text/css">
+    <link href="https://fonts.proxy.ustclug.org/css?family=Pacifico" rel="stylesheet" type="text/css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-
+<body>
     <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+            </div>
+            <a class="navbar-brand"><img src="./img/icon.png" width="50" height="50" /></a> <a class="navbar-brand" style="font-family:'Bungee Inline';">&nbsp;&nbsp;&nbsp;&nbsp;重庆交通大学 LUNA 协会</a>
+            <div id="navbar" class="navbar-collapse collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">首页</a></li>
+                    <li><a href="./freshman.html">新生指南</a></li>
+                    <li><a href="./info.html">校园信息</a></li>
+                    <li><a href="./mirror.html">校内镜像</a></li>
+                    <li><a href="./about.html">关于</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-          <a class="navbar-brand"><img src="./img/icon.png" width="50" height="50"/></a>
-          <a class="navbar-brand" style="font-family:'Bungee Inline';">&nbsp;&nbsp;&nbsp;&nbsp;重庆交通大学 LUNA 协会</a>
-        <div id="navbar" class="navbar-collapse collapse navbar-right">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">首页</a></li>
-            <li><a href="./freshman.html">新生指南</a></li>
-            <li><a href="./info.html">校园信息</a></li>
-            <li><a href="./mirror.html">校内镜像</a></li>
-            <li><a href="./about.html">关于</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </nav>
-
     <div class="jumbotron text-center">
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <span style="font-family:'Bungee Inline';"><h1><b>LUNA</b></h1></span>
-      <span style="font-family:'Jura';"><h3><b>L</b>izihu <b>U</b>topia LU<b>N</b>A <b>A</b>ssociation</h3></span>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p> <span style="font-family:'Bungee Inline';"><h1><b>LUNA</b></h1></span> <span style="font-family:'Jura',sans serif;"><h3><b>L</b>izihu <b>U</b>topia LU<b>N</b>A <b>A</b>ssociation</h3></span>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
     </div>
-
     <div class="container">
-<div class="page-header">
-        <h1># 服务列表</h1>
-</div><!--/ header -->
-
-      <div class="row centered" id="service-list">
-      <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="./mirror.html"><img src="./img/mirror.png" width="100" height="100"/></a>
-        <h4>校内镜像<h4>
-          <p>通过校内服务器快速地下载一些资源。</p>
+        <div class="page-header">
+            <h1># 服务列表</h1> </div>
+        <!--/ header -->
+        <div class="row centered" id="service-list">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="./mirror.html"><img src="./img/mirror.png" width="100" height="100" /></a>
+                <h4>校内镜像<h4>
+          <p>通过校内镜像服务器快速下载<del>羞羞的</del>资源吧!</p>
       </div><!--/.col-md-4 col-sm-6 col-xs-12 -->
       <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="https://github.com/lunad3v"><img src="./img/git.png" width="100" height="100"/></a>
         <h4>Git<h4>
-          <p>参与LUNA的代码开发</p>
+          <p>为什么不<del>穿上女装</del>来参与LUNA的代码开发和维护呢喵~</p>
       </div><!--/.col-md-4 col-sm-6 col-xs-12 -->
       <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="./calendar.html"><img src="./img/cal.png" width="100" height="100"/></a>
         <h4>活动<h4>
-          <p>来参与我们为数不多的线下活动吧！</p>
+          <p>来参与我们<del>少得可怜</del>为数不多的线下活动吧！(逃  _(xз」∠)_</p>
       </div><!--/.col-md-4 col-sm-6 col-xs-12 -->
     </div><!--/.service-list-->
     <div class="page-header">
             <h1># 校园链接</h1>
-            <small>仅可以在内网访问的按钮为红色，除教务以外其他的实用性并不强</small>
+            <small>红色按钮仅供校内网用户访问. 除教务外,其他链接实用性较差.</small>
     </div><!--/ header -->
     <div class="row">
       <div class="col-md-4 col-xs-12 col-sm-6">
         <div class="page-header">
-          <h4>课程相关链接</h4>
-        </div><!-- /.page-header -->
-        <p><a href="http://jw.cqjtu.edu.cn"><button type="button" class="btn btn-danger">教务网</button></a>
-        <small>用来查询成绩，查询课表，在线选课etc</small></p>
-        <a href="http://10.8.170.13:81/"><button type="button" class="btn btn-danger">新视野英语</button></a>
-        <a href="http://10.8.170.13/"><button type="button" class="btn btn-danger">英语写作智能批改系统</button></a>
-        <a href="http://10.8.170.11/npels"><button type="button" class="btn btn-danger">新理念英语</button></a>
-        <a href="http://lib.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">期刊数据库（维普、万方等）</button></a>
-        <p><a href="http://library.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">图书馆</button></a>
-        <small>论文查重的等</small></p>
-              </div><!-- /.col-md-4 col-xs-12 col-sm-6-->
-<div class="col-md-4 col-xs-12 col-sm-6">
-        <div class="page-header">
-          <h4>课外相关链接</h4>
-        </div><!-- /.page-header -->
-        <p><a href="http://ty.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">天佑年华</button></a>
-        <small></small></p>
-        <p><a href="http://xz.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">天佑学长</button></a>
-        <small></small></p>
-        <p><a href="http://at.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">AT展厅 </button></a>
-        <small></small></p>
-        <p><a href="http://nic.cqjtu.edu.cn/"><button type="button" class="btn btn-primary">官方网络中心</button></a>
-        <small></small></p>
-      </div><!-- /.col-md-4 col-xs-12 col-sm-6-->
-      <div class="col-md-4 col-xs-12 col-sm-6">
-        <div class="page-header">
-          <h4>其他</h4>
-          </div><!-- /.page-header -->
-      <p><a href="http://202.202.240.162/plugins/weathermap/view.php"><button type="button" class="btn btn-primary">流量拓扑</button></a>
-      <p><a href="http://202.202.240.166/"><button type="button" class="btn btn-danger">工资查询</button></a>
-      </div><!-- /.col-md-4 col-xs-12 col-sm-6-->
-
-    </div><!-- /.row -->
-        <div class="page-header">
-          <h1># 联系我们</h1>
-        </div><!-- /.page-header -->
-		<p>发送邮件至：<code>lunaluna[at]riseup.net</code></p>
-
-    </div> <!-- /container -->
-
+          <h4>课程相关链接</h4> </div>
+            <!-- /.page-header -->
+            <a href="http://10.8.170.13:81/">
+                <button type="button" class="btn btn-danger">新视野英语</button>
+            </a> <span> </span>
+            <a href="http://10.8.170.11/npels">
+                <button type="button" class="btn btn-danger">新理念英语</button>
+            </a>
+            </p>
+            <p>
+                <a href="http://10.8.170.13/">
+                    <button type="button" class="btn btn-danger">英语写作智能批改系统</button>
+                </a>
+            </p>
+            <p>
+                <a href="http://lib.cqjtu.edu.cn/">
+                    <button type="button" class="btn btn-primary">期刊数据库（维普、万方等）</button>
+                </a>
+            </p>
+            <p>
+                <a href="http://library.cqjtu.edu.cn/">
+                    <button type="button" class="btn btn-primary">图书馆</button>
+                </a> <small>论文查重的等</small></p>
+            <p>
+                <a href="http://jw.cqjtu.edu.cn">
+                    <button type="button" class="btn btn-danger">教务网</button>
+                </a> <small>用来查询成绩，查询课表，在线选课, etc</small> </p>
+            <p>
+        </div>
+        <!-- /.col-md-4 col-xs-12 col-sm-6-->
+        <div class="col-md-4 col-xs-12 col-sm-6">
+            <div class="page-header">
+                <h4>课外相关链接</h4> </div>
+            <!-- /.page-header -->
+            <p>
+                <a href="http://ty.cqjtu.edu.cn/">
+                    <button type="button" class="btn btn-primary">天佑年华</button>
+                </a> <small></small></p>
+            <p>
+                <a href="http://xz.cqjtu.edu.cn/">
+                    <button type="button" class="btn btn-primary">天佑学长</button>
+                </a> <small></small></p>
+            <p>
+                <a href="http://at.cqjtu.edu.cn/">
+                    <button type="button" class="btn btn-primary">AT展厅 </button>
+                </a> <small></small></p>
+            <p>
+                <a href="http://nic.cqjtu.edu.cn/">
+                    <button type="button" class="btn btn-primary">官方网络中心</button>
+                </a> <small></small></p>
+        </div>
+        <!-- /.col-md-4 col-xs-12 col-sm-6-->
+        <div class="col-md-4 col-xs-12 col-sm-6">
+            <div class="page-header">
+                <h4>其他</h4> </div>
+            <!-- /.page-header -->
+            <p>
+                <a href="http://202.202.240.162/plugins/weathermap/view.php">
+                    <button type="button" class="btn btn-primary">流量拓扑</button>
+                </a>
+                <p>
+                    <a href="http://202.202.240.166/">
+                        <button type="button" class="btn btn-danger">工资查询</button>
+                    </a>
+        </div>
+        <!-- /.col-md-4 col-xs-12 col-sm-6-->
+    </div>
+    <!-- /.row -->
+    <div class="page-header">
+        <h1># 联系我们</h1> </div>
+    <!-- /.page-header -->
+    <p>发送邮件至：<code>lunaluna&commat;riseup.net</code></p>
+    </div>
+    <!-- /container -->
     <div id="footerwrap">
-<div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        <p>LUNA是由重庆交通大学学生建立的非官方计算机协会，旨在能改善体验，方便查询信息。</p>
-        <span style="font-family:'Pacifico';"><p>Lizihu Utopia LUNA Association</p></span>
-      </div>
-        <div class="col-sm-4">
-          <center><h2><b>明德行远，交通天下</b></h2></center>
-          <center><h3><b>CODE IS POETRY</b></h3></center>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>LUNA是由重庆交通大学学生建立的非官方计算机协会，旨在改善体验，方便信息查询。</p> <span style="font-family:'Pacifico';"><p>Lizihu Utopia LUNA Association</p></span> </div>
+                <div class="col-sm-4">
+                    <center>
+                        <h2><b>明德行远，交通天下</b></h2></center>
+                    <center>
+                        <h3><b>CODE IS POETRY</b></h3></center>
+                </div>
+                <div class="col-sm-4">
+                    <p>人人有权享有主张和发表意见的自由；此项权利包括持有主张而不受干涉的自由，和通过任何媒介和不论国界寻求、接受和传递消息和思想的自由。</p>
+                    <p>
+                        <世界人权宣言，第19条，1948>
+                    </p>
+                </div>
+            </div>
+            <!--/.row -->
         </div>
-
-        <div class="col-sm-4">
-          <p>人人有权享有主张和发表意见的自由；此项权利包括持有主张而不受干涉的自由，和通过任何媒介和不论国界寻求、接受和传递消息和思想的自由。</p>
-          <p><世界人权宣言，第19条，1948></p>
-        </div>
-    </div><!--/.row -->
-</div><!--/.container -->
-</div><!--/.footerwrap -->
-
-
+        <!--/.container -->
+    </div>
+    <!--/.footerwrap -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./js/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="./js/jquery.min.js"><\/script>')</script>
+    <script>
+        window.jQuery || document.write('<script src="./js/jquery.min.js"><\/script>')
+    </script>
     <script src="./js/bootstrap.min.js"></script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-91444039-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+</body>
 
-  ga('create', 'UA-91444039-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-  </body>
 </html>
