prevent break of emotion characters.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="./calendar.html"><img src="./img/cal.png" width="100" height="100"/></a>
         <h4>活动<h4>
-          <p>来参与我们<del>少得可怜</del>为数不多的线下活动吧！(逃  _(xз」∠)_</p>
+          <p>来参与我们<del>少得可怜</del>为数不多的线下活动吧！<br>(逃_(xз」∠)_</p>
       </div><!--/.col-md-4 col-sm-6 col-xs-12 -->
     </div><!--/.service-list-->
     <div class="page-header">
